# convert2tea

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  package.yml  requirements.txt  setup.cfg
convert2tea/: convert2tea.py  convertLots.py  examples.py  genericAIModel.py  myParser.py
convert2tea/templates/: prompt-1-example.jinja2  prompt-1-example.lctemplate
output-old/apr-util/: package-3.yml  package-4.yml  package-5.yml  package-6.yml
output-old/argocd/: package-1.yml  package-3.yml  package-6.yml  package-7.yml
output-old/argon2/: package-2.yml
output-old/asciidoc/: package-0.yml  package-1.yml  package-2.yml  package-5.yml
output-old/atk/: package-3.yml
output-old/augeas/: package-0.yml  package-17.yml  package-8.yml  package-9.yml
output-old/aws/: package-0.yml
output-old/aws-iam-authenticator/: package-3.yml
output-old/bash-completion/: package-0.yml  package-1.yml  package-12.yml  package-3.yml  package-4.yml  package-5.yml
output-old/bdw-gc/: package-1.yml
output-old/berkeley-db/: package-1.yml  package-10.yml  package-4.yml
output-old/capstone/: package-0.yml
output-old/carthage/: package-2.yml
output-old/ccache/: package-0.yml
output-old/cfn-lint/: package-0.yml  package-1.yml
output-old/cgal/: package-3.yml  package-6.yml  package-7.yml
output-old/chruby/: package-1.yml
output-old/colima/: package-1.yml
output-old/counterfeiter/: package-3.yml
output-old/cpptoml/: package-0.yml
output-old/cppunit/: package-0.yml  package-2.yml
output-old/cscope/: package-0.yml  package-2.yml
output-old/dbus/: package-7.yml
(+1915 files in other folders)
