[metadata]
name = convert2tea
version = 0.0.1
description = Convert other package manager files to Tea
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
readme = README.md
license = MIT
license_file = LICENSE
url = https://github.com/magnusviri/convert2tea
keywords = convert to tea
project_urls =
    Documentation = https://github.com/magnusviri/convert2tea

[options]
packages = convert2tea
install_requires = 
	openai>=0.27.2
	jinja2
	requests

[options.entry_points]
console_scripts =
	convert2tea = convert2tea.__main__:main



